Ajouts de l'attribut "defer" au script fontawesome

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" type="text/css" href="css/tablette.css" />
     <link rel="stylesheet" type="text/css" href="css/phone.css" />
     <title>Booki</title>
-    <script
+    <!--FONTAWESOME-->
+    <script defer
       src="https://kit.fontawesome.com/79857fa36d.js"
       crossorigin="anonymous"
     ></script>
+    <!--END FONTAWESOME-->
   </head>
   <body>
     <header>
