--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/phone.css" />
     <title>Booki</title>
     <!--FONTAWESOME-->
-    <script defer
+    <script
+      defer
       src="https://kit.fontawesome.com/79857fa36d.js"
       crossorigin="anonymous"
     ></script>
@@ -19,11 +20,15 @@
     <header>
       <nav>
         <div id="logo">
-          <img src="assets/logo/Booki.png" alt="logo du site" />
+          <a href="index.html">
+            <img src="assets/logo/Booki.png" alt="logo du site"
+          /></a>
         </div>
         <ul>
-          <li><a href="#hebergement">H&eacute;bergements</a></li>
-          <li><a href="#activites">Activit&eacute;s</a></li>
+          <li>
+            <a class="titre_nav" href="#hebergement">H&eacute;bergements</a>
+          </li>
+          <li><a class="titre_nav" href="#activites">Activit&eacute;s</a></li>
         </ul>
       </nav>
     </header>
